Update Items, NPCs, and Quests admin UI

--- a/lib/web/templates/admin/item/_form.html.eex
+++ b/lib/web/templates/admin/item/_form.html.eex
@@ -1,107 +1,140 @@
-<div class="box">
-  <div class="box-header">
-    <h3 class="box-title"><%= @title %></h3>
-  </div>
-
-  <%= form_for @changeset, @path, fn (f) -> %>
+<div class="box box-primary">
+  <%= form_for @changeset, @path, [class: "form-horizontal"], fn (f) -> %>
     <div class="box-body">
+      <h4>Basics</h4>
+      <hr />
+
       <div class="form-group">
-        <%= label f, :type %>
-        <%= select f, :type, types(), class: "form-control" %>
-        <%= error_tag f, :type %>
+        <%= label f, :type, class: "col-md-4" %>
+        <div class="col-md-8">
+          <%= select f, :type, types(), class: "form-control" %>
+          <%= error_tag f, :type %>
+        </div>
       </div>
 
       <div class="form-group">
-        <%= label f, :level %>
-        <%= number_input f, :level, class: "form-control" %>
-        <%= error_tag f, :level %>
+        <%= label f, :level, class: "col-md-4" %>
+        <div class="col-md-8">
+          <%= number_input f, :level, class: "form-control" %>
+          <%= error_tag f, :level %>
+        </div>
       </div>
 
       <div class="form-group">
-        <%= label f, :name %>
-        <%= text_input f, :name, class: "form-control" %>
-        <%= error_tag f, :name %>
+        <%= label f, :name, class: "col-md-4" %>
+        <div class="col-md-8">
+          <%= text_input f, :name, class: "form-control" %>
+          <%= error_tag f, :name %>
+        </div>
       </div>
 
       <div class="form-group">
-        <%= label f, :description %>
-        <%= textarea f, :description, class: "form-control" %>
-        <%= error_tag f, :description %>
+        <%= label f, :description, class: "col-md-4" %>
+        <div class="col-md-8">
+          <%= textarea f, :description, class: "form-control" %>
+          <%= error_tag f, :description %>
+        </div>
       </div>
 
       <div class="form-group">
-        <%= label f, :tags %>
-        <%= text_input f, :tags, value: @changeset |> tags(), class: "form-control" %>
-        <%= error_tag f, :tags %>
+        <%= label f, :tags, class: "col-md-4" %>
+        <div class="col-md-8">
+          <%= text_input f, :tags, value: @changeset |> tags(), class: "form-control" %>
+          <%= error_tag f, :tags %>
+        </div>
       </div>
 
       <div class="form-group">
-        <%= label f, :keywords %>
-        <%= text_input f, :keywords, value: @changeset |> keywords(), class: "form-control" %>
-        <%= error_tag f, :keywords %>
+        <%= label f, :keywords, class: "col-md-4" %>
+        <div class="col-md-8">
+          <%= text_input f, :keywords, value: @changeset |> keywords(), class: "form-control" %>
+          <%= error_tag f, :keywords %>
+        </div>
       </div>
 
       <div class="form-group">
-        <%= label f, :cost %>
-        <%= number_input f, :cost, class: "form-control" %>
-        <%= error_tag f, :cost %>
+        <%= label f, :cost, class: "col-md-4" %>
+        <div class="col-md-8">
+          <%= number_input f, :cost, class: "form-control" %>
+          <%= error_tag f, :cost %>
+        </div>
+      </div>
+
+      <h4>Usage</h4>
+      <hr />
+
+      <div class="form-group">
+        <div class="col-md-8 col-md-offset-4">
+          <%= label f, :is_usable do %>
+            <%= checkbox f, :is_usable %> Is Usable?
+          <% end %>
+          <%= error_tag f, :is_usable %>
+        </div>
       </div>
 
       <div class="form-group">
-        <%= label f, :stats %>
-        <%= textarea f, :stats, value: @changeset |> json_field(:stats), class: "form-control", rows: 5 %>
-        <%= error_tag f, :stats %>
-        <span class="help-block">Enter in valid JSON</span>
-        <span class="help-block">Valid slots are: <%= Stats.slots() |> Enum.join(", ") %></span>
-        <%= render(SharedView, "_stats.html", stats_id: "item_stats", type_id: "item_type") %>
+        <%= label f, :amount, class: "col-md-4" %>
+        <div class="col-md-8">
+          <%= text_input f, :amount, class: "form-control" %>
+          <%= error_tag f, :amount %>
+          <span class="help-block">Amount of use an item has if usable</span>
+        </div>
       </div>
 
       <div class="form-group">
-        <%= label f, :effects %>
-        <%= textarea f, :effects, value: @changeset |> json_field(:effects), class: "form-control", rows: 15 %>
-        <%= error_tag f, :effects %>
-        <span class="help-block">Enter in valid JSON</span>
-        <%= render(SharedView, "_effects.html", id: "item_effects") %>
+        <%= label f, :user_text, class: "col-md-4" %>
+        <div class="col-md-8">
+          <%= text_input f, :user_text, class: "form-control" %>
+          <%= error_tag f, :user_text %>
+          <span class="help-block">Available replacements: <code>[user]</code>, <code>[name]</code>, <code>[target]</code></span>
+        </div>
       </div>
 
       <div class="form-group">
-        <%= label f, :user_text %>
-        <%= text_input f, :user_text, class: "form-control" %>
-        <%= error_tag f, :user_text %>
-        <span class="help-block">Available replacements: <code>[user]</code>, <code>[name]</code>, <code>[target]</code></span>
+        <%= label f, :usee_text, class: "col-md-4" %>
+        <div class="col-md-8">
+          <%= text_input f, :usee_text, class: "form-control" %>
+          <%= error_tag f, :usee_text %>
+          <span class="help-block">Available replacements: <code>[user]</code>, <code>[name]</code>, <code>[target]</code></span>
+        </div>
+      </div>
+
+      <h4>Stats</h4>
+      <hr />
+
+      <div class="form-group">
+        <%= label f, :stats, class: "col-md-4" %>
+        <div class="col-md-8">
+          <%= textarea f, :stats, value: @changeset |> json_field(:stats), class: "form-control", rows: 5 %>
+          <%= error_tag f, :stats %>
+          <span class="help-block">Enter in valid JSON</span>
+          <span class="help-block">Valid slots are: <%= Stats.slots() |> Enum.join(", ") %></span>
+          <%= render(SharedView, "_stats.html", stats_id: "item_stats", type_id: "item_type") %>
+        </div>
       </div>
 
       <div class="form-group">
-        <%= label f, :usee_text %>
-        <%= text_input f, :usee_text, class: "form-control" %>
-        <%= error_tag f, :usee_text %>
-        <span class="help-block">Available replacements: <code>[user]</code>, <code>[name]</code>, <code>[target]</code></span>
+        <%= label f, :effects, class: "col-md-4" %>
+        <div class="col-md-8">
+          <%= textarea f, :effects, value: @changeset |> json_field(:effects), class: "form-control", rows: 15 %>
+          <%= error_tag f, :effects %>
+          <span class="help-block">Enter in valid JSON</span>
+          <%= render(SharedView, "_effects.html", id: "item_effects") %>
+        </div>
       </div>
 
       <div class="form-group">
-        <%= label f, :is_usable do %>
-          <%= checkbox f, :is_usable %> Is Usable?
-        <% end %>
-        <%= error_tag f, :is_usable %>
-      </div>
-
-      <div class="form-group">
-        <%= label f, :amount %>
-        <%= text_input f, :amount, class: "form-control" %>
-        <%= error_tag f, :amount %>
-        <span class="help-block">Amount of use an item has if usable</span>
-      </div>
-
-      <div class="form-group">
-        <%= label f, :whitelist_effects %>
-        <%= multiple_select f, :whitelist_effects, Effect.types(), multiple: true, class: "form-control", size: 5 %>
-        <%= error_tag f, :whitelist_effects %>
-        <span class="help-block"><%= Help.get("item.whitelist_effects") %></span>
+        <%= label f, :whitelist_effects, class: "col-md-4" %>
+        <div class="col-md-8">
+          <%= multiple_select f, :whitelist_effects, Effect.types(), multiple: true, class: "form-control", size: 5 %>
+          <%= error_tag f, :whitelist_effects %>
+          <span class="help-block"><%= Help.get("item.whitelist_effects") %></span>
+        </div>
       </div>
     </div>
 
     <div class="box-footer">
-      <%= submit @submit, class: "btn btn-primary" %>
+      <%= submit @submit, class: "btn btn-primary pull-right" %>
     </div>
   <% end %>
 </div>
