--- a/lib/web/templates/admin/item_aspect/new.html.eex
+++ b/lib/web/templates/admin/item_aspect/new.html.eex
@@ -2,11 +2,21 @@
   <h1>
     New Item Aspect
   </h1>
+
+  <ol class="breadcrumb">
+    <li>
+      <%= link(to: dashboard_path(@conn, :index)) do %>
+        <i class="fa fa-dashboard"></i> Home
+      <% end %>
+    </li>
+    <li><%= link("Item Aspects", to: item_aspect_path(@conn, :index)) %></li>
+    <li class="active">New</li>
+  </ol>
 </section>
 
 <section class="content">
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-10 col-md-offset-1">
       <%= render "_form.html", path: item_aspect_path(@conn, :create), changeset: @changeset, keywords: [], title: "New", submit: "Create" %>
     </div>
   </div>
