--- a/lib/web/templates/admin/quest_step/_item_collect.html.eex
+++ b/lib/web/templates/admin/quest_step/_item_collect.html.eex
@@ -1,11 +1,15 @@
 <div class="form-group">
-  <%= label @f, :count %>
-  <%= number_input @f, :count, class: "form-control" %>
-  <%= error_tag @f, :count %>
+  <%= label @f, :count, class: "col-md-4" %>
+  <div class="col-md-8">
+    <%= number_input @f, :count, class: "form-control" %>
+    <%= error_tag @f, :count %>
+  </div>
 </div>
 
 <div class="form-group">
-  <%= label @f, :item_id %>
-  <%= select @f, :item_id, Item.for_select(), prompt: "Select Item", class: "form-control" %>
-  <%= error_tag @f, :item_id %>
+  <%= label @f, :item_id, class: "col-md-4" %>
+  <div class="col-md-8">
+    <%= select @f, :item_id, Item.for_select(), prompt: "Select Item", class: "form-control" %>
+    <%= error_tag @f, :item_id %>
+  </div>
 </div>
