--- a/lib/web/templates/admin/item/index.html.eex
+++ b/lib/web/templates/admin/item/index.html.eex
@@ -2,12 +2,21 @@
   <h1>
     Items
   </h1>
+
+  <ol class="breadcrumb">
+    <li>
+      <%= link(to: dashboard_path(@conn, :index)) do %>
+        <i class="fa fa-dashboard"></i> Home
+      <% end %>
+    </li>
+    <li class="active">Items</li>
+  </ol>
 </section>
 
 <section class="content">
   <div class="row">
     <div class="col-md-9">
-      <div class="box">
+      <div class="box box-primary">
         <div class="box-header">
           <div class="box-tools">
             <%= link("New Item", to: item_path(@conn, :new), class: "btn btn-primary") %>
