--- a/lib/web/templates/admin/item/show.html.eex
+++ b/lib/web/templates/admin/item/show.html.eex
@@ -2,12 +2,22 @@
   <h1>
     <%= @item.name %>
   </h1>
+
+  <ol class="breadcrumb">
+    <li>
+      <%= link(to: dashboard_path(@conn, :index)) do %>
+        <i class="fa fa-dashboard"></i> Home
+      <% end %>
+    </li>
+    <li><%= link("Items", to: item_path(@conn, :index)) %></li>
+    <li class="active"><%= @item.name %></li>
+  </ol>
 </section>
 
 <section class="content">
   <div class="row">
     <div class="col-md-12">
-      <div class="box">
+      <div class="box box-primary">
         <div class="box-header">
           <h3 class="box-title">Attributes</h3>
           <div class="box-tools">
