--- a/lib/web/templates/admin/npc/_form.html.eex
+++ b/lib/web/templates/admin/npc/_form.html.eex
@@ -1,100 +1,134 @@
-<div class="box">
-  <div class="box-header">
-    <h3 class="box-title"><%= @title %></h3>
-  </div>
-
-  <%= form_for @changeset, @path, fn (f) -> %>
+<div class="box box-primary">
+  <%= form_for @changeset, @path, [class: "form-horizontal"], fn (f) -> %>
     <div class="box-body">
+      <h4>Basics</h4>
+      <hr />
+
       <div class="form-group">
-        <%= label f, :level %>
-        <%= number_input f, :level, class: "form-control" %>
-        <%= error_tag f, :level %>
+        <%= label f, :level, class: "col-md-4" %>
+        <div class="col-md-8">
+          <%= number_input f, :level, class: "form-control" %>
+          <%= error_tag f, :level %>
+        </div>
       </div>
 
       <div class="form-group">
-        <%= label f, :name %>
-        <%= text_input f, :name, class: "form-control" %>
-        <%= error_tag f, :name %>
+        <%= label f, :name, class: "col-md-4" %>
+        <div class="col-md-8">
+          <%= text_input f, :name, class: "form-control" %>
+          <%= error_tag f, :name %>
+        </div>
       </div>
 
       <div class="form-group">
-        <%= label f, :tags %>
-        <%= text_input f, :tags, value: @changeset |> tags(), class: "form-control" %>
-        <%= error_tag f, :tags %>
+        <%= label f, :tags, class: "col-md-4" %>
+        <div class="col-md-8">
+          <%= text_input f, :tags, value: @changeset |> tags(), class: "form-control" %>
+          <%= error_tag f, :tags %>
+        </div>
       </div>
 
       <div class="form-group">
-        <%= label f, :status_line %>
-        <%= text_input f, :status_line, class: "form-control" %>
-        <%= error_tag f, :status_line %>
-        <span class="help-block">Make sure to include <code>[name]</code></span>
+        <div class="col-md-8 col-md-offset-4">
+          <%= label f, :is_quest_giver do %>
+            <%= checkbox f, :is_quest_giver %> Is a quest giver?
+          <% end %>
+          <%= error_tag f, :is_quest_giver %>
+        </div>
       </div>
 
       <div class="form-group">
-        <%= label f, :status_listen %>
-        <%= text_input f, :status_listen, class: "form-control" %>
-        <%= error_tag f, :status_listen %>
-        <span class="help-block"><%= Help.get("npc.status_listen") %></span>
+        <div class="col-md-8 col-md-offset-4">
+          <%= label f, :is_trainer do %>
+            <%= checkbox f, :is_trainer %> Is a skill tainer?
+          <% end %>
+          <%= error_tag f, :is_trainer %>
+        </div>
+      </div>
+
+      <h4>Descriptive</h4>
+      <hr />
+
+      <div class="form-group">
+        <%= label f, :status_line, class: "col-md-4" %>
+        <div class="col-md-8">
+          <%= text_input f, :status_line, class: "form-control" %>
+          <%= error_tag f, :status_line %>
+          <span class="help-block">Make sure to include <code>[name]</code></span>
+        </div>
       </div>
 
       <div class="form-group">
-        <%= label f, :description %>
-        <%= textarea f, :description, class: "form-control", rows: 3 %>
-        <%= error_tag f, :description %>
-        <span class="help-block"><%= Help.get("npc.description") %></span>
+        <%= label f, :status_listen, class: "col-md-4" %>
+        <div class="col-md-8">
+          <%= text_input f, :status_listen, class: "form-control" %>
+          <%= error_tag f, :status_listen %>
+          <span class="help-block"><%= Help.get("npc.status_listen") %></span>
+        </div>
       </div>
 
       <div class="form-group">
-        <%= label f, :experience_points %>
-        <%= number_input f, :experience_points, class: "form-control" %>
-        <%= error_tag f, :experience_points %>
-        <span class="help-block">Experience will scale based on the NPCs level</span>
+        <%= label f, :description, class: "col-md-4" %>
+        <div class="col-md-8">
+          <%= textarea f, :description, class: "form-control", rows: 3 %>
+          <%= error_tag f, :description %>
+          <span class="help-block"><%= Help.get("npc.description") %></span>
+        </div>
       </div>
 
       <div class="form-group">
-        <%= label f, :currency, currency() |> String.capitalize() %>
-        <%= number_input f, :currency, class: "form-control" %>
-        <%= error_tag f, :currency %>
-        <span class="help-block"><%= currency() |> String.capitalize() %> will drop in the room on defeat</span>
+        <%= label f, :script, class: "col-md-4" %>
+        <div class="col-md-8">
+          <%= textarea f, :script, value: @changeset |> script(), class: "form-control", rows: 15 %>
+          <%= error_tag f, :script %>
+          <span class="help-block">Enter in valid JSON</span>
+        </div>
+      </div>
+
+      <h4>Stats</h4>
+      <hr />
+
+      <div class="form-group">
+        <%= label f, :experience_points, class: "col-md-4" %>
+        <div class="col-md-8">
+          <%= number_input f, :experience_points, class: "form-control" %>
+          <%= error_tag f, :experience_points %>
+          <span class="help-block">Experience will scale based on the NPCs level</span>
+        </div>
       </div>
 
       <div class="form-group">
-        <%= label f, :is_quest_giver do %>
-          <%= checkbox f, :is_quest_giver %> Is a quest giver?
-        <% end %>
-        <%= error_tag f, :is_quest_giver %>
+        <%= label f, :currency, currency() |> String.capitalize(), class: "col-md-4" %>
+        <div class="col-md-8">
+          <%= number_input f, :currency, class: "form-control" %>
+          <%= error_tag f, :currency %>
+          <span class="help-block"><%= currency() |> String.capitalize() %> will drop in the room on defeat</span>
+        </div>
       </div>
 
       <div class="form-group">
-        <%= label f, :is_trainer do %>
-          <%= checkbox f, :is_trainer %> Is a skill tainer?
-        <% end %>
-        <%= error_tag f, :is_trainer %>
+        <%= label f, :stats, class: "col-md-4" %>
+        <div class="col-md-8">
+          <%= textarea f, :stats, value: @changeset |> stats(), class: "form-control", rows: 13 %>
+          <%= error_tag f, :stats %>
+          <span class="help-block">Enter in valid JSON</span>
+        </div>
       </div>
 
-      <div class="form-group">
-        <%= label f, :stats %>
-        <%= textarea f, :stats, value: @changeset |> stats(), class: "form-control", rows: 12 %>
-        <%= error_tag f, :stats %>
-        <span class="help-block">Enter in valid JSON</span>
-      </div>
+      <h4>Miscellaneous</h4>
+      <hr />
 
       <div class="form-group">
-        <%= label f, :script %>
-        <%= textarea f, :script, value: @changeset |> script(), class: "form-control", rows: 15 %>
-        <%= error_tag f, :script %>
-        <span class="help-block">Enter in valid JSON</span>
-      </div>
-
-      <div class="form-group">
-        <%= label f, :notes %>
-        <%= textarea f, :notes, class: "form-control", rows: 10 %>
-        <%= error_tag f, :notes %>
+        <%= label f, :notes, class: "col-md-4" %>
+        <div class="col-md-8">
+          <%= textarea f, :notes, class: "form-control", rows: 10 %>
+          <%= error_tag f, :notes %>
+        </div>
       </div>
     </div>
 
     <div class="box-footer">
-      <%= submit @submit, class: "btn btn-primary" %>
+      <%= submit @submit, class: "btn btn-primary pull-right" %>
     </div>
   <% end %>
 </div>
