--- a/lib/web/templates/admin/npc_event/_form.html.eex
+++ b/lib/web/templates/admin/npc_event/_form.html.eex
@@ -1,4 +1,4 @@
-<div class="box">
+<div class="box box-primary">
   <div class="box-header">
     <h3 class="box-title"><%= @title %></h3>
   </div>
@@ -53,7 +53,7 @@ $(function() {
     </div>
 
     <div class="box-footer">
-      <%= submit @submit, class: "btn btn-primary" %>
+      <%= submit @submit, class: "btn btn-primary pull-right" %>
     </div>
   <% end %>
 </div>
