--- a/lib/web/templates/admin/npc_event/index.html.eex
+++ b/lib/web/templates/admin/npc_event/index.html.eex
@@ -18,7 +18,7 @@
 <section class="content">
   <div class="row">
     <div class="col-md-12">
-      <div class="box">
+      <div class="box box-primary">
         <div class="box-header">
           <h3 class="box-title">Events</h3>
           <div class="box-tools">
