--- a/lib/web/templates/admin/npc_item/_form.html.eex
+++ b/lib/web/templates/admin/npc_item/_form.html.eex
@@ -1,26 +1,30 @@
-<div class="box">
+<div class="box box-primary">
   <div class="box-header">
     <h3 class="box-title"><%= @title %></h3>
   </div>
 
-  <%= form_for @changeset, @path, fn (f) -> %>
+  <%= form_for @changeset, @path, [class: "form-horizontal"], fn (f) -> %>
     <div class="box-body">
       <div class="form-group">
-        <%= label f, :item_id, "Item" %>
-        <%= select f, :item_id, @items |> Enum.map(&({&1.name, &1.id})), class: "form-control" %>
-        <%= error_tag f, :item_id %>
+        <%= label f, :item_id, class: "col-md-4" %>
+        <div class="col-md-8">
+          <%= select f, :item_id, @items |> Enum.map(&({&1.name, &1.id})), class: "form-control" %>
+          <%= error_tag f, :item_id %>
+        </div>
       </div>
 
       <div class="form-group">
-        <%= label f, :drop_rate, "Drop Rate" %>
-        <%= number_input f, :drop_rate, class: "form-control" %>
-        <%= error_tag f, :drop_rate %>
-        <span class="help-block"><%= Help.get("npc.item_drop_rate") %></span>
+        <%= label f, :drop_rate, "Drop Rate", class: "col-md-4" %>
+        <div class="col-md-8">
+          <%= number_input f, :drop_rate, class: "form-control" %>
+          <%= error_tag f, :drop_rate %>
+          <span class="help-block"><%= Help.get("npc.item_drop_rate") %></span>
+        </div>
       </div>
     </div>
 
     <div class="box-footer">
-      <%= submit @submit, class: "btn btn-primary" %>
+      <%= submit @submit, class: "btn btn-primary pull-right" %>
     </div>
   <% end %>
 </div>
