--- a/lib/web/templates/admin/npc_item/edit.html.eex
+++ b/lib/web/templates/admin/npc_item/edit.html.eex
@@ -17,7 +17,7 @@
 
 <section class="content">
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-10 col-md-offset-1">
       <%= render "_form.html", path: npc_item_path(@conn, :update, @npc_item.id), items: @items, changeset: @changeset, title: "Edit NPC Item", submit: "Update" %>
     </div>
   </div>
