--- a/lib/web/templates/admin/npc_spawner/new.html.eex
+++ b/lib/web/templates/admin/npc_spawner/new.html.eex
@@ -17,25 +17,27 @@
 
 <section class="content">
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-10 col-md-offset-1">
       <%= if display_full_form?(@conn) do %>
         <%= render "_form.html", path: npc_spawner_path(@conn, :create, @npc.id), zone: @zone, changeset: @changeset, new: true, title: "New", submit: "Create" %>
       <% else %>
-        <div class="box">
+        <div class="box box-primary">
           <div class="box-header">
             <h3 class="box-title">Zone</h3>
           </div>
 
-          <%= form_tag npc_spawner_path(@conn, :new, @npc.id), method: :get do %>
+          <%= form_tag npc_spawner_path(@conn, :new, @npc.id), [method: :get, class: "form-horizontal"] do %>
             <div class="box-body">
               <div class="form-group">
-                <%= label :npc_spawner, :zone_id %>
-                <%= select :npc_spawner, :zone_id, Zone.all() |> Enum.map(&({&1.name, &1.id})), class: "form-control" %>
+                <%= label :npc_spawner, :zone_id, class: "col-md-4" %>
+                <div class="col-md-8">
+                  <%= select :npc_spawner, :zone_id, Zone.all() |> Enum.map(&({&1.name, &1.id})), class: "form-control" %>
+                </div>
               </div>
             </div>
 
             <div class="box-footer">
-              <%= submit "Continue", class: "btn btn-primary" %>
+              <%= submit "Continue", class: "btn btn-primary pull-right" %>
             </div>
           <% end %>
         </div>
