--- a/lib/web/templates/admin/npc_spawner/show.html.eex
+++ b/lib/web/templates/admin/npc_spawner/show.html.eex
@@ -18,7 +18,7 @@
 <section class="content">
   <div class="row">
     <div class="col-md-12">
-      <div class="box">
+      <div class="box box-secondary">
         <div class="box-header">
           <h3 class="box-title">Basics</h3>
         </div>
@@ -48,7 +48,7 @@
 
   <div class="row">
     <div class="col-md-12">
-      <div class="box">
+      <div class="box box-primary">
         <div class="box-header">
           <h3 class="box-title">Chat</h3>
         </div>
