--- a/lib/web/templates/admin/quest/new.html.eex
+++ b/lib/web/templates/admin/quest/new.html.eex
@@ -16,7 +16,7 @@
 
 <section class="content">
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-10 col-md-offset-1">
       <%= render "_form.html", path: quest_path(@conn, :create), changeset: @changeset, title: "New", submit: "Create" %>
     </div>
   </div>
