--- a/lib/web/templates/admin/quest/show.html.eex
+++ b/lib/web/templates/admin/quest/show.html.eex
@@ -17,7 +17,7 @@
 <section class="content">
   <div class="row">
     <div class="col-md-6">
-      <div class="box">
+      <div class="box box-primary">
         <div class="box-header">
           <h3 class="box-title">Attributes</h3>
           <div class="box-tools">
@@ -61,7 +61,7 @@
     </div>
 
     <div class="col-md-6">
-      <div class="box">
+      <div class="box box-warning">
         <div class="box-header">
           <h3 class="box-title">Rewards</h3>
         </div>
