--- a/lib/web/templates/admin/quest_relation/_form.html.eex
+++ b/lib/web/templates/admin/quest_relation/_form.html.eex
@@ -1,42 +1,50 @@
-<div class="box">
+<div class="box box-primary">
   <div class="box-header">
     <h3 class="box-title"><%= @title %></h3>
   </div>
 
-  <%= form_for @changeset, @path, fn (f) -> %>
+  <%= form_for @changeset, @path, [class: "form-horizontal"], fn (f) -> %>
     <div class="box-body">
       <input type="hidden" name="side" value="<%= @side %>" />
 
       <%= case @side do %>
         <% "parent" -> %>
           <div class="form-group">
-            <%= label f, :parent_id %>
-            <%= select f, :parent_id, quests(), value: @quest.id, disabled: true, class: "form-control" %>
-            <%= error_tag f, :parent_id %>
+            <%= label f, :parent_id, class: "col-md-4" %>
+            <div class="col-md-8">
+              <%= select f, :parent_id, quests(), value: @quest.id, disabled: true, class: "form-control" %>
+              <%= error_tag f, :parent_id %>
+            </div>
           </div>
 
           <div class="form-group">
-            <%= label f, :child_id %>
-            <%= select f, :child_id, quests(@quest), class: "form-control" %>
-            <%= error_tag f, :child_id %>
+            <%= label f, :child_id, class: "col-md-4" %>
+            <div class="col-md-8">
+              <%= select f, :child_id, quests(@quest), class: "form-control" %>
+              <%= error_tag f, :child_id %>
+            </div>
           </div>
         <% "child" -> %>
           <div class="form-group">
-            <%= label f, :parent_id %>
-            <%= select f, :parent_id, quests(@quest), class: "form-control" %>
-            <%= error_tag f, :parent_id %>
+            <%= label f, :parent_id, class: "col-md-4" %>
+            <div class="col-md-8">
+              <%= select f, :parent_id, quests(@quest), class: "form-control" %>
+              <%= error_tag f, :parent_id %>
+            </div>
           </div>
 
           <div class="form-group">
-            <%= label f, :child_id %>
-            <%= select f, :child_id, quests(), value: @quest.id, disabled: true, class: "form-control" %>
-            <%= error_tag f, :child_id %>
+            <%= label f, :child_id, class: "col-md-4" %>
+            <div class="col-md-8">
+              <%= select f, :child_id, quests(), value: @quest.id, disabled: true, class: "form-control" %>
+              <%= error_tag f, :child_id %>
+            </div>
           </div>
       <% end %>
     </div>
 
     <div class="box-footer">
-      <%= submit @submit, class: "btn btn-primary" %>
+      <%= submit @submit, class: "btn btn-primary pull-right" %>
     </div>
   <% end %>
 </div>
