--- a/lib/web/templates/admin/quest_relation/new.html.eex
+++ b/lib/web/templates/admin/quest_relation/new.html.eex
@@ -17,7 +17,7 @@
 
 <section class="content">
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-10 col-md-offset-1">
       <%= render "_form.html", quest: @quest, side: @side, path: quest_relation_path(@conn, :create, @quest.id), changeset: @changeset, title: "Add Relation", submit: "Create" %>
     </div>
   </div>
