--- a/lib/web/templates/admin/quest_step/_room_explore.html.eex
+++ b/lib/web/templates/admin/quest_step/_room_explore.html.eex
@@ -1,6 +1,8 @@
 <div class="form-group">
-  <%= label @f, :room_id %>
-  <%= number_input @f, :room_id, placeholder: "Enter Room ID", class: "form-control" %>
-  <%= error_tag @f, :room_id %>
-  <span class="help-block">Since this can be any of the rooms in the game, find it's ID and paste it here</span>
+  <%= label @f, :room_id, class: "col-md-4" %>
+  <div class="col-md-8">
+    <%= number_input @f, :room_id, placeholder: "Enter Room ID", class: "form-control" %>
+    <%= error_tag @f, :room_id %>
+    <span class="help-block">Since this can be any of the rooms in the game, find it's ID and paste it here</span>
+  </div>
 </div>
